# peppermint_assignment

./: README.md  trajectory.csv
bbot_description/: CMakeLists.txt  my_map.pgm  package.xml
bbot_description/config/: display.rviz  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  navigationrviz.rviz  twist_mux.yaml
bbot_description/launch/: display.launch.py  gazebo.launch.py  localization_launch.py  navigation.launch.py  navigation_launch.py
bbot_description/src/: backward.m4a  forward.m4a  image_subscriber.py  left.m4a  obj_publisher.py  pose_navigator.cpp  python.py  republisher.py  right.m4a  voice_client.py  voice_service.py  yolo.py
bbot_description/urdf/: bbot.xacro  diff_drive.xacro  ros2_control.xacro
bbot_description/worlds/: aruco.world
custom_service/: CMakeLists.txt
custom_service/src/: traj_saver.cpp
custom_service/srv/: IdSw.srv
robot_nav2/: CMakeLists.txt  package.xml
robot_nav2/launch/: nav2_bringup.launch.py
robot_nav2/map/: aruco_map.pgm  aruco_map.yaml  aruco_world.pgm  aruco_world.yaml  my_map_new.pgm  my_map_new.yaml
robot_nav2/params/: nav2_params.yaml
robot_nav2/rviz/: nav2_default_view.rviz
traj_visual/: CMakeLists.txt  package.xml
traj_visual/scripts/: traj_read.cpp  traj_saver.cpp
